# tfin

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_accounting.py  test_engine.py  test_event.py
tfin/: __init__.py  accounting.py  engine.py  event.py
