[tool.poetry]
name = "tfin"
version = "0.1.0"
description = "An event driven business and financial simulator"
authors = ["TvB"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "\b"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
mypy = "^0.910"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
